# multi-ssh-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  multi_ssh_mcp.py  pyproject.toml  requirements.txt  security_utils.py  ssh_config_example.json
config/: .gitkeep
scripts/: build.sh  run-docker.sh
